--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,3 +6,5 @@ tasks:
           unzip aws-sam-cli-linux-x86_64.zip -d sam-installation
           sudo ./sam-installation/install 
           sam --version
+          mkdir test-app
+          cd test-app
